<resources>
    <string name="app_name">calculater</string>
    <string name="sum">2+33</string>
    <string name="mod">%</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="left">(</string>
    <string name="right">)</string>
    <string name="plusAndMinus">+/-</string>
    <string name="times">*</string>
    <string name="div">/</string>
    <string name="equal">=</string>
    <string name="clear">C</string>
    <string name="dot">.</string>
</resources>