<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/sum"
        android:textSize="60sp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:layout_marginTop="100dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/black"

            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/mod"
                android:textSize="25sp"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/Gray_100"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/seven"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/Gray_600"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/four"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/Gray_600"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/one"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/Gray_600"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="C"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/Gray_600"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/left"
                android:textSize="25sp"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/Gray_100"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/Gray_600"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/five"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/Gray_600"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/two"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/Gray_600"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/Gray_600"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/right"
                android:textSize="25sp"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/Gray_100"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/nine"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/Gray_600"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/six"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/Gray_600"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/three"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/Gray_600"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/dot"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/Gray_600"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/plusAndMinus"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/orange_400"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/times"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/orange_400"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/div"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/orange_400"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/equal"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/orange_400"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="10dp" />


        </LinearLayout>











    </LinearLayout>




</LinearLayout>


















